--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,7 +1,7 @@
 <div>
-    <ul>
+    <ul class="list-group">
     {{#each products}}
-        <li>Nombre: {{this.title}} || Descripción: {{this.description}} || Precio: {{this.price}}</li>
+        <li class="list-group-item">Nombre: {{this.title}} || Descripción: {{this.description}} || Precio: {{this.price}}</li>
     {{/each}}
     </ul>
 </div>
