se agrega deleteProduct

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -22,9 +22,9 @@
     <hr>
     <br>
     <h2>Eliminar Producto</h2>
-    <form id="delete-prod">
+    <form id="delete-prod-form">
         <label for="id">Id Producto:</label>
-        <input type="text" name="id" id="id">
+        <input type="text" name="id" id="id-product">
 
         <button type="submit">Borrar producto</button>
     </form>
