agrego a ruta vistas render de chat

--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -2,9 +2,11 @@
     <div>
         <h1>Chat</h1>
     </div>
+    <form id="chat-form">
     <label>Ingrese su mensaje</label>
     <input type="text" name="chat-input" id="chat-input">
-    <button id="send-button">Enviar</button>
+    <button type="submit">Enviar</button>
+    </form>
 
     <div id="chat-container">
         <ul id="chat-messages"></ul>
