add view products

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,6 +1,6 @@
 <div>
     <ul class="list-group">
-    {{#each products}}
+    {{#each products.docs}}
         <li class="list-group-item">Nombre: {{this.title}} || Descripción: {{this.description}} || Precio: {{this.price}}</li>
     {{/each}}
     </ul>
