--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -34,13 +34,12 @@
     <br>
 
     <h2>Lista actualizada</h2>
-    <ul class="list-group">
  
-    <div id="product-container">
-        <ul id="update-container">{{title}} || {{description}} || ${{price}}</ul>
+    <div class="list-group" id="product-container">
+        <ul  id="update-container"></ul>
     </div>
     
-    </ul>
+   
 </div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/index.js"></script>
