--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -1,14 +1,14 @@
 <div>
-    <h1>Productos</h1>
+    <h1>Productos en el carrito</h1>
     <div class="container-fluid d-flex justify-content-around">
-        <div class="card" style="width: 18rem;">
-        {{!-- <img src={{this.thumbnail}} class="card-img-top" alt="..."> --}}
-            <div class="card-body">
-                <h5 class="card-title fw-bold">{{this.title}}</h5>
-                <p class="card-text">{{this.description}}</p>
-                <p class="card-text fw-bolder">{{this.price}}</p>
-                <a href="#" class="btn btn-primary">Agregar al carrito</a>
+        {{#each products}}
+            <div class="card" style="width: 18rem;">
+            {{!-- <img src={{this.thumbnail}} class="card-img-top" alt="..."> --}}
+                <div class="card-body">
+                    <h5 class="card-title fw-bold">{{this.product.title}}</h5>
+                    <p class="card-text">{{this.quantity}}</p>
+                    <p class="card-text fw-bolder">{{this.product.price}}</p>
                 </div>
-        </div>
+            </div>
+        {{/each}}
     </div>
-</div>
