agrego login con github

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,6 +9,7 @@
         <input type="submit">
     </form>
     <p>¿No estás registrado? <a href="/register">Regístrate aquí</a></p>
+    <p><a href="/api/sessions/github">Entrar con GitHub</a></p>
 </div>
 
 <script src="/js/login.js"></script>
