--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,13 +1,18 @@
 <div>
     <h1>Login</h1>
-    <form id="loginForm">
+    <br id="loginForm">
         <label>Email</label>
         <input name="email">
         <br/>
         <label>Contraseña</label>
         <input name="password" type="password">
         <input type="submit">
+        
     </form>
+    <br>
+    <a href="/forgot-password">
+        <button>Restablecer constraseña</button>
+    </a>
     <p>¿No estás registrado? <a href="/register">Regístrate aquí</a></p>
     <p><a href="/api/sessions/github">Entrar con GitHub</a></p>
 </div>
