agrego testing de sessions

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,6 +1,6 @@
 <div>
     <h1>Login</h1>
-    <br id="loginForm">
+    <form id="loginForm">
         <label>Email</label>
         <input name="email">
         <br/>
