--- a/src/views/userView.handlebars
+++ b/src/views/userView.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <h1>Productos en el carrito</h1>
+    <h1>Usuario</h1>
     <div class="container-fluid d-flex justify-content-around">
             <div class="card" style="width: 18rem;">
             {{!-- <img src={{this.thumbnail}} class="card-img-top" alt="..."> --}}
@@ -7,6 +7,10 @@
                     <h5 class="card-title fw-bold">Nombre: {{usuario.fullName}}</h5>
                     <p class="card-text fw-bolder">Email: {{usuario.email}}</p>
                     <p class="card-text fw-bolder">Role: {{usuario.role}}</p>
+                </div>
+                <div class="d-flex justify-content-evenly">
+                    <a href="#" class="btn btn-primary">Cambiar rol</a>
+                    <a href="#" class="btn btn-danger">Eliminar</a>
                 </div>
             </div>
     </div>
