--- a/src/views/userFind.handlebars
+++ b/src/views/userFind.handlebars
@@ -3,11 +3,14 @@
     <form id="userForm">
         <label>ID</label>
         <input name="id" id="id">
-        <br/>
-
-        <input type="submit">
+        <br>
+        <br>
+        <input type="submit" class="btn btn-warning">
         
     </form>
+    <br>
+    <a href="/" class="btn btn-primary">Volver</a>
+
     <br>
 
 </div>
