--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -2,45 +2,51 @@
 
     <h1>Bienvenido {{user.full_name}} </h1>
     {{#if isAdmin}}
-        <h2>Perfil Admin</h2>
-        <a href="/userfind" class="btn btn-primary">Administrar usuarios</a>
-    {{/if}}    
-    <a href="/api/sessions/logout" ><button class="btn btn-info">Salir</button></a>
+    <h2>Perfil Admin</h2>
+    <a href="/userfind" class="btn btn-primary">Administrar usuarios</a>
+    {{/if}}
+    <a href="/api/sessions/logout"><button class="btn btn-info">Salir</button></a>
 
     <h1>Productos</h1>
-    <div class="container-fluid d-flex justify-content-around">
+    <div class="container-fluid">
+    <div class="row row-cols-5">
         {{#each products.docs}}
-            <div class="card" style="width: 18rem;">
-            {{!-- <img src={{this.thumbnail}} class="card-img-top" alt="..."> --}}
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">{{this.title}}</h5>
-                    <p class="card-text">{{this.description}}</p>
-                    <p class="card-text fw-bolder">{{this.price}}</p>
-                    <a href="#" class="btn btn-primary">Agregar al carrito</a>
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    {{!-- <img src={{this.thumbnail}} class="card-img-top" alt="..."> --}}
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">{{this.title}}</h5>
+                        <p class="card-text">{{this.description}}</p>
+                        <p class="card-text fw-bolder">{{this.price}}</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
                 </div>
             </div>
         {{/each}}
     </div>
-  <div class="container-fluid d-flex justify-content-around">
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <li class="page-item">
-                {{#if products.hasPrevPage}}
-                    <a class="page-link btn btn-primary" href="{{products.prevLink}}">Anterior</a>
-                {{else}}
-                    <span class="page-link btn btn-secondary disabled">Anterior</span>
-                {{/if}}
-            </li>
-            <li class="page-item"><span class="page-link btn btn-light">Página {{products.page}} de {{products.totalPages}}</span></li>
-            <li class="page-item">
-                {{#if products.hasNextPage}}
-                    <a class="page-link btn btn-primary" href="{{products.nextLink}}">Siguiente</a>
-                {{else}}
-                    <span class="page-link btn btn-secondary disabled">Siguiente</span>
-                {{/if}}
-            </li>
-        </ul>
-    </nav>
 </div>
+
+    <div class="container-fluid d-flex justify-content-around">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item">
+                    {{#if products.hasPrevPage}}
+                    <a class="page-link btn btn-primary" href="{{products.prevLink}}">Anterior</a>
+                    {{else}}
+                    <span class="page-link btn btn-secondary disabled">Anterior</span>
+                    {{/if}}
+                </li>
+                <li class="page-item"><span class="page-link btn btn-light">Página {{products.page}} de
+                        {{products.totalPages}}</span></li>
+                <li class="page-item">
+                    {{#if products.hasNextPage}}
+                    <a class="page-link btn btn-primary" href="{{products.nextLink}}">Siguiente</a>
+                    {{else}}
+                    <span class="page-link btn btn-secondary disabled">Siguiente</span>
+                    {{/if}}
+                </li>
+            </ul>
+        </nav>
+    </div>
 
 </div>
