--- a/src/views/userView.handlebars
+++ b/src/views/userView.handlebars
@@ -1,16 +1,19 @@
 <div>
     <h1>Usuario</h1>
     <div class="container-fluid d-flex justify-content-around">
-            <div class="card" style="width: 18rem;">
-            {{!-- <img src={{this.thumbnail}} class="card-img-top" alt="..."> --}}
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">Nombre: {{usuario.fullName}}</h5>
-                    <p class="card-text fw-bolder">Email: {{usuario.email}}</p>
-                    <p class="card-text fw-bolder">Role: {{usuario.role}}</p>
-                </div>
-                <div class="d-flex justify-content-evenly">
-                    <a href="#" class="btn btn-primary">Cambiar rol</a>
-                    <a href="#" class="btn btn-danger">Eliminar</a>
-                </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title fw-bold">Nombre: {{usuario.fullName}}</h5>
+                <p id="id" class="card-text fw-bolder">ID: {{usuario._id}}</p>
+                <p class="card-text fw-bolder">Role: {{usuario.role}}</p>
+                <p class="card-text fw-bolder">Email: {{usuario.email}}</p>
             </div>
+            <div class="d-flex justify-content-evenly">
+                <button id="change-role" class="btn btn-primary" data-userid="{{usuario._id}}">Cambiar rol</button>
+                <button href="#" class="btn btn-danger">Eliminar</button>
+            </div>
+        </div>
     </div>
+</div>
+
+<script src="/js/changeRole.js"></script>
