se implementa la funcion para el boton eliminar usuario

--- a/src/views/userView.handlebars
+++ b/src/views/userView.handlebars
@@ -10,10 +10,10 @@
             </div>
             <div class="d-flex justify-content-evenly">
                 <button id="change-role" class="btn btn-primary" data-userid="{{usuario._id}}">Cambiar rol</button>
-                <button href="#" class="btn btn-danger">Eliminar</button>
+                <button id="delete-user" class="btn btn-danger" data-userid="{{usuario._id}}">Eliminar</button>
             </div>
         </div>
     </div>
 </div>
 
-<script src="/js/changeRole.js"></script>
+<script src="/js/userManagement.js"></script>
