agrego boton volver a userview

--- a/src/views/userView.handlebars
+++ b/src/views/userView.handlebars
@@ -12,6 +12,8 @@
                 <button id="change-role" class="btn btn-primary" data-userid="{{usuario._id}}">Cambiar rol</button>
                 <button id="delete-user" class="btn btn-danger" data-userid="{{usuario._id}}">Eliminar</button>
             </div>
+            <br>
+            <a href="/userfind" class="btn btn-info">Volver</a>
         </div>
     </div>
 </div>
