agrega funcionalidad ver carrito

--- a/src/views/userView.handlebars
+++ b/src/views/userView.handlebars
@@ -5,6 +5,7 @@
             <div class="card-body">
                 <h5 class="card-title fw-bold">Nombre: {{usuario.fullName}}</h5>
                 <p id="id" class="card-text fw-bolder">ID: {{usuario._id}}</p>
+                <p id="id" class="card-text fw-bolder">Cart: {{usuario.cart}}</p>
                 <p class="card-text fw-bolder">Role: {{usuario.role}}</p>
                 <p class="card-text fw-bolder">Email: {{usuario.email}}</p>
             </div>
