--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -1,14 +1,37 @@
 <div>
-    <h1>Productos en el carrito</h1>
-    <div class="container-fluid d-flex justify-content-around">
-        {{#each products}}
-            <div class="card" style="width: 18rem;">
-            {{!-- <img src={{this.thumbnail}} class="card-img-top" alt="..."> --}}
-                <div class="card-body">
-                    <h5 class="card-title fw-bold">{{this.product.title}}</h5>
-                    <p class="card-text">{{this.quantity}}</p>
-                    <p class="card-text fw-bolder">{{this.product.price}}</p>
+    <div>
+        <nav class="navbar navbar-expand-lg bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/cart/{{carrito}}">Ver Carrito</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        {{/each}}
+        </nav>
+    </div>
+    <h1>Productos en el carrito</h1>
+    <div class="container-fluid d-flex justify-content-around">
+        <div class="row row-cols-5">
+            {{#each products}}
+            <div class="col">
+                <div class="card" style="width: 18rem;">
+                    {{!-- <img src={{this.thumbnail}} class="card-img-top" alt="..."> --}}
+                    <div class="card-body">
+                        <h5 class="card-title fw-bold">{{this.product.title}}</h5>
+                        <p class="card-text">{{this.quantity}}</p>
+                        <p class="card-text fw-bolder">{{this.product.price}}</p>
+                    </div>
+                </div>
+            </div>
+            {{/each}}
+        </div>
     </div>
