--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,16 +1,37 @@
 <div>
+    <nav class="navbar navbar-expand-lg bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cart/{{carrito}}">Ver Carrito</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
+</div>
+</nav>
 
     <h1>Bienvenido {{user.full_name}} </h1>
+    <p class="d-none" id="cart">{{carrito}}</p>
     {{#if isAdmin}}
     <h2>Perfil Admin</h2>
     <a href="/userfind" class="btn btn-primary">Administrar usuarios</a>
     {{/if}}
     <a href="/api/sessions/logout"><button class="btn btn-info">Salir</button></a>
 
+
     <h1>Productos</h1>
     <div class="container-fluid">
-    <div class="row row-cols-5">
-        {{#each products.docs}}
+        <div class="row row-cols-5">
+            {{#each products.docs}}
             <div class="col">
                 <div class="card" style="width: 18rem;">
                     {{!-- <img src={{this.thumbnail}} class="card-img-top" alt="..."> --}}
@@ -18,13 +39,16 @@
                         <h5 class="card-title fw-bold">{{this.title}}</h5>
                         <p class="card-text">{{this.description}}</p>
                         <p class="card-text fw-bolder">{{this.price}}</p>
-                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                        <a class="btn btn-primary add-to-cart" data-cart="{{carrito}}"
+                            data-product-id="{{this.id}}">Agregar al carrito</a>
+
                     </div>
                 </div>
             </div>
-        {{/each}}
+            {{/each}}
+        </div>
     </div>
-</div>
+
 
     <div class="container-fluid d-flex justify-content-around">
         <nav aria-label="Page navigation example">
@@ -50,3 +74,4 @@
     </div>
 
 </div>
+<script src="/js/cartManagement.js"></script>
