--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -34,7 +34,7 @@
             {{#each products.docs}}
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    {{!-- <img src={{this.thumbnail}} class="card-img-top" alt="..."> --}}
+                    <img src={{this.thumbnail}} class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title fw-bold">{{this.title}}</h5>
                         <p class="card-text">{{this.description}}</p>
